@@ -140,25 +140,29 @@
     </condition>
   </target>
 
-  <target name="javacc" depends="ivy-retrieve-build">
+  <target name="javacc-check" depends="ivy-retrieve-build">
+  <uptodate property="javacc.uptodate"
+            srcfile="${java.src.dir}/org/apache/avro/genavro/genavro.jj"
+            targetfile="${build.dir}/src/org/apache/avro/genavro"/>
+  </target>
+
+  <target name="javacc" depends="javacc-check" unless="javacc.uptodate">
     <mkdir dir="${build.dir}/src/org/apache/avro/genavro"/>
-    <copy tofile="${ivy.lib}/javacc.jar" file="${ivy.lib}/javacc-5.0.jar"
-        overwrite="true"/>
+    <copy tofile="${ivy.lib}/javacc.jar" file="${ivy.lib}/javacc-5.0.jar"/>
     <javacc target="${java.src.dir}/org/apache/avro/genavro/genavro.jj"
             outputdirectory="${build.dir}/src/org/apache/avro/genavro"
             javacchome="${ivy.lib}"/>
   </target>
 
   <target name="compile" depends="javacc,ivy-retrieve">
-    <java-compiler
-       excludes="**/ipc/** **/*Requestor.java **/*Responder.java
-       **/tool/** **/mapred/**">
-      <src path="${build.dir}/src"/>
+    <property name="depends.on.generated"
+	      value="**/ipc/** **/*Requestor.java **/*Responder.java
+		     **/tool/** **/mapred/**"/>
+    <java-compiler excludes="${depends.on.generated}">
       <src path="${java.src.dir}"/>
     </java-compiler>
     <java-avro-compiler/>
-    <java-compiler>
-      <src path="${build.dir}/src"/>
+    <java-compiler includes="${depends.on.generated}">
       <src path="${java.src.dir}"/>
     </java-compiler>
     <copy todir="${build.classes}"> 
